--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -64,7 +64,7 @@ components.java {
 publishing {
     publications {
         mavenFabric(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
+            artifactId = rootProject.archives_base_name + "-" + rootProject.minecraft_version + project.name + "-fabric"
             from components.java
         }
     }
