--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -67,7 +67,7 @@ components.java {
 publishing {
     publications {
         mavenForge(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
+            artifactId = rootProject.archives_base_name + "-" + rootProject.minecraft_version + project.name + "-forge"
             from components.java
         }
     }
