--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,50 @@
-org.gradle.jvmargs=-Xmx2048M
+# gradle
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+org.gradle.warning.mode=all
+org.gradle.debug=false
 
-minecraft_version=1.21
-enabled_platforms=fabric,forge,neoforge
+# minecraft
+minecraft_version=1.21.1
 
-archives_base_name=ease-out-night-vision
+# mod properties
+mod_name=No Night Vision Flickering
+mod_id=no_night_vision_flickering
 mod_version=0.2
-maven_group=net.semperidem
+mod_authors=semper-idem
+mod_license=Mozilla 2.0
+mod_description=Changes night vision ending animation to a smooth fade-out.
+
+# mod links
+url_homepage=https://modrinth.com/mod/no-night-vision-flickering
+git_sources=https://github.com/stlouisn/neoforge_no_night_vision_flickering
+git_issues=https://github.com/stlouisn/neoforge_no_night_vision_flickering/issues
+
+# maven
+archives_base_name=no_night_vision_flickering
+maven_group=dev.no_night_vision_flickering
+
+# platforms
+loom.platform=neoforge
+
+# architectury loom https://github.com/architectury/architectury-loom
+architectury_loom_version=1.7
+
+# architectury api https://modrinth.com/mod/architectury-api/versions
+architectury_api_version=13.0.6
+
+# architectury plugin https://github.com/architectury/architectury-plugin
+architectury_plugin_version=3.4
+
+# neoforge https://neoforged.net/
+neoforge_version=21.1.57
+neoforge_min_version=21.1.1
+
+# fabric yarn mappings https://fabricmc.net/develop/
 yarn_mappings=1.21.1+build.3
 
-architectury_version=13.0.6
+# neoforge yarn mappings https://maven.architectury.dev/dev/architectury/yarn-mappings-patch-neoforge/
+yarn_mappings_patch_neoforge=1.21+build.4
 
-fabric_loader_version=0.16.5
-fabric_api_version=${FABRIC_API_VERSION}
-
-forge_version=1.21-51.0.33
+# parchment mappings https://parchmentmc.org/docs/getting-started
+parchment_version=1.21:2024.07.28
