fix url and rename jar

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,12 @@ mod_license=Mozilla 2.0
 mod_description=Changes night vision ending animation to a smooth fade-out.
 
 # mod links
-url_homepage=https://modrinth.com/mod/no-night-vision-flickering
+url_homepage=https://github.com/stlouisn/neoforge_no_night_vision_flickering
 git_sources=https://github.com/stlouisn/neoforge_no_night_vision_flickering
 git_issues=https://github.com/stlouisn/neoforge_no_night_vision_flickering/issues
 
 # maven
-archives_base_name=_custom_no-night-vision-flickering
+archives_base_name=no-night-vision-flickering
 maven_group=dev.no_night_vision_flickering
 
 # platforms
