--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 plugins {
-  id "dev.architectury.loom" version "${architectury_loom_version}-SNAPSHOT"
-  id "architectury-plugin" version "${architectury_plugin_version}-SNAPSHOT"
+  id "fabric-loom" version "${fabric_loom_version}-SNAPSHOT"
   id "java-library"
+  id "idea"
 }
-
-architectury { minecraft = minecraft_version }
 
 group = maven_group
 version = mod_version
 
-base { archivesName = "_custom_${archives_base_name}-${minecraft_version}-neoforge" }
-
-repositories { maven { url = "https://maven.neoforged.net/releases" } }
+base { archivesName = "${archives_base_name}-${minecraft_version}" }
 
 dependencies {
   minecraft "com.mojang:minecraft:${minecraft_version}"
-  neoForge "net.neoforged:neoforge:${neoforge_version}"
+  modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+  modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
   loom {
     if (file("src/main/resources/${archives_base_name}.accesswidener").exists()) {
       accessWidenerPath = file("src/main/resources/${archives_base_name}.accesswidener")
+    }
+    mixin {
+      defaultRefmapName.set("${archives_base_name}.refmap.json")
     }
   }
   implementation "org.jetbrains:annotations:latest.release"
@@ -52,7 +52,7 @@ tasks.withType(JavaCompile).configureEach {
 processResources {
   def stringProperties = providers.gradlePropertiesPrefixedBy('').get()
   stringProperties.each { inputs.property(it.key, it.value) }
-  ["META-INF/neoforge.mods.toml"].each {
+  ["fabric.mod.json"].each {
     filesMatching(it) {
       expand(stringProperties) { escapeBackslash = true }
     }
